# coffee

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  dev.py  pyproject.toml
.github/workflows/: ci-cd.yml  release.yml
src/coffee/: __init__.py  main.py  network.py  power.py
tests/: conftest.py  test_integration.py  test_main.py  test_network.py  test_power.py
